@@ -25,7 +25,7 @@ ELSEIF(EXISTS ${PROJECT_BINARY_DIR}/../build.cmake)
 	MESSAGE(STATUS "Reading custom variables from: ${PROJECT_BINARY_DIR}/../build.cmake")
 	INCLUDE(${PROJECT_BINARY_DIR}/../build.cmake)
 ELSE(NSCP_CMAKE_CONFIG)
-	MESSAGE(STATUS "NO build configurationconfiguration found")
+	MESSAGE(STATUS "NO build configuration found")
 ENDIF(NSCP_CMAKE_CONFIG)
 SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
 SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/build/cmake;${CMAKE_MODULE_PATH}")
@@ -118,6 +118,9 @@ ELSE(USE_STATIC_RUNTIME)
 	FOREACH (LIB ${LIBS})
 		STRING(REPLACE ".lib" ".dll" Boost_${LIB}_LIBRARY_RELEASE_DLL ${Boost_${LIB}_LIBRARY_RELEASE})
 		COPY_FILE(${Boost_${LIB}_LIBRARY_RELEASE_DLL} ${PROJECT_BINARY_DIR})
+		if(WIN32)
+			INSTALL(FILES ${Boost_${LIB}_LIBRARY_RELEASE_DLL} DESTINATION .)
+		endif(WIN32)
 		STRING(REPLACE ".lib" ".dll" Boost_${LIB}_LIBRARY_DEBUG_DLL ${Boost_${LIB}_LIBRARY_DEBUG})
 		COPY_FILE(${Boost_${LIB}_LIBRARY_DEBUG_DLL} ${PROJECT_BINARY_DIR})
 	ENDFOREACH()
@@ -125,11 +128,19 @@ ELSE(USE_STATIC_RUNTIME)
 	FOREACH (LIB ${LIBS})
 		STRING(REPLACE ".lib" ".dll" ${LIB}_EAY_RELEASE_DLL "${${LIB}_EAY_RELEASE}")
 		COPY_FILE("${${LIB}_EAY_RELEASE_DLL}" ${PROJECT_BINARY_DIR})
-#		STRING(REPLACE ".lib" ".dll" ${LIB}_EAY_DEBUG_DLL "${${LIB}_EAY_DEBUG}")
-#		FILE(COPY ${${LIB}_EAY_DEBUG_DLL} DESTINATION ${PROJECT_BINARY_DIR})
+		if(WIN32)
+			INSTALL(FILES "${${LIB}_EAY_RELEASE_DLL}" DESTINATION .)
+		endif(WIN32)
 	ENDFOREACH()
 ENDIF(USE_STATIC_RUNTIME)
 
+IF(PYTHON_DIST)
+SET (LIBS _socket.pyd python27.dll python27.zip unicodedata.pyd)
+FOREACH (LIB ${LIBS})
+	COPY_FILE(${PYTHON_DIST}/${LIB} ${PROJECT_BINARY_DIR})
+	INSTALL(FILES ${PYTHON_DIST}/${LIB} DESTINATION .)
+ENDFOREACH()
+ENDIF(PYTHON_DIST)
 
 #############################################################################
 #
@@ -324,7 +335,7 @@ ENDIF(CRYPTOPP_CMAKE)
 IF(GTEST_FOUND AND ( NOT GTEST_GTEST_FOUND OR NOT GTEST_GTEST_MAIN_FOUND ) )
 	MESSAGE(STATUS " - google test++")
 	IF(BUILD_SHARED_LIBS)
-		SET(gtest_force_shared_crt ON)
+		SET(gtest_force_shared_crt ON CACHE BOOL "Override shared crt")
 	ENDIF(BUILD_SHARED_LIBS)
 	SET(OLD_BUILD_SHARED_LIBS ${BUILD_SHARED_LIBS})
 	SET(BUILD_SHARED_LIBS OFF)
