@@ -28,5 +28,6 @@ IF(WIN32)
 	SET_LIBRARY_OUT_FOLDER_MODULE(NSCP.Core)
 	
 	SET_TARGET_PROPERTIES(NSCP.Core PROPERTIES FOLDER "libraries/dotnet")
+	#INSTALL(TARGETS NSCP.Core DESTINATION .)
 
 ENDIF(WIN32)
