@@ -59,6 +59,10 @@ IF (HAVE_LUA)
 		ENDIF(USE_STATIC_RUNTIME)
 
 		SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER "libraries")
+		IF(NOT USE_STATIC_RUNTIME)
+			INSTALL(TARGETS ${TARGET} DESTINATION .)
+		ENDIF(NOT USE_STATIC_RUNTIME)
+
 		SET(LUA_LIB lua PARENT_SCOPE)
 		
 	ENDIF(NOT LUA_LIBS_FOUND)
