@@ -64,3 +64,6 @@ TARGET_LINK_LIBRARIES(${TARGET}
 	${Boost_PROGRAM_OPTIONS_LIBRARY}
 	protobuf)
 ADD_DEPENDENCIES(${TARGET} protobuf)
+IF(NOT USE_STATIC_RUNTIME)
+	INSTALL(TARGETS ${TARGET} DESTINATION .)
+ENDIF(NOT USE_STATIC_RUNTIME)
