@@ -31,6 +31,9 @@ SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER "libraries")
 TARGET_LINK_LIBRARIES(${TARGET}
 	${PROTOBUF_LIBRARY}
 )
+IF(NOT USE_STATIC_RUNTIME)
+	INSTALL(TARGETS ${TARGET} DESTINATION .)
+ENDIF(NOT USE_STATIC_RUNTIME)
 
 IF(PROTOC_GEN_JSON_FOUND AND JSON_SPIRIT_FOUND)
 	SET(TARGET json_pb)
@@ -67,6 +70,9 @@ IF(PROTOC_GEN_JSON_FOUND AND JSON_SPIRIT_FOUND)
 		protobuf
 		json_spirit
 	)
+	IF(NOT USE_STATIC_RUNTIME)
+		INSTALL(TARGETS ${TARGET} DESTINATION .)
+	ENDIF(NOT USE_STATIC_RUNTIME)
 ENDIF()
 
 
@@ -104,6 +110,10 @@ IF (PROTOC_GEN_LUA_FOUND AND HAVE_LUA)
 		protobuf
 		${LUA_LIB}
 	)
+	IF(NOT USE_STATIC_RUNTIME)
+		INSTALL(TARGETS ${TARGET} DESTINATION .)
+	ENDIF(NOT USE_STATIC_RUNTIME)
+
 
 	IF(WIN32)
 		SET_TARGET_PROPERTIES(${TARGET} PROPERTIES COMPILE_FLAGS "/FI\"${BUILD_ROOT_FOLDER}\\include\\nscapi\\dll_defines_protobuf.hpp\"")
