@@ -19,5 +19,6 @@ IF(CSHARP_FOUND)
 	)
 	ADD_DEPENDENCIES(NSCP.Protobuf NSCP.Core)
 	SET_TARGET_PROPERTIES(NSCP.Protobuf PROPERTIES FOLDER "libraries/dotnet")
+	INSTALL(FILES ${BUILD_TARGET_EXE_PATH}/NSCP.Protobuf.dll Google.ProtocolBuffers.dll DESTINATION .)
 
 ENDIF(CSHARP_FOUND)
