@@ -64,5 +64,7 @@ TARGET_LINK_LIBRARIES(${TARGET}
 	${Boost_FILESYSTEM_LIBRARY}
 	${Boost_PROGRAM_OPTIONS_LIBRARY}
 	${Boost_REGEX_LIBRARY}
-
 )
+IF(NOT USE_STATIC_RUNTIME)
+	INSTALL(TARGETS ${TARGET} DESTINATION .)
+ENDIF(NOT USE_STATIC_RUNTIME)
