@@ -162,6 +162,10 @@ IF(GTEST_FOUND)
 	)
 	IF (MSVC11)
 		SET_TARGET_PROPERTIES(${TARGET}_test PROPERTIES COMPILE_FLAGS "-DGTEST_HAS_TR1_TUPLE=1 -D_VARIADIC_MAX=10 -DGTEST_USE_OWN_TR1_TUPLE=0")
+		SET_TARGET_PROPERTIES(${TARGET}_test PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${BUILD_TARGET_EXE_PATH})
+		SET_TARGET_PROPERTIES(${TARGET}_test PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ${BUILD_TARGET_EXE_PATH})
+		SET_TARGET_PROPERTIES(${TARGET}_test PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ${BUILD_TARGET_EXE_PATH})
+		SET_TARGET_PROPERTIES(${TARGET}_test PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${BUILD_TARGET_EXE_PATH})
 	ENDIF(MSVC11)
 	SET_TARGET_PROPERTIES(${TARGET}_test PROPERTIES FOLDER "tests")
 ENDIF(GTEST_FOUND)
